--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,3 @@
 {{template "header"}}
-
-<h2>
-	<a href="/github/login"><button type="button">Login with Github</button></a>
-</h2>
-
-
+<h2><a href="/google/login"><button type="button">Login with Google</button></a></h2>
 {{template "footer"}}
