--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,6 +1,7 @@
 {{template "header"}}
 
-<h2>You are logged in {{ .GithubName }}!</h2>
+<h2>Administrator page {{ .ID }}</h2>
+<p>Hi {{ .Name }}</p>
 
 <form action="/logout" method="post">
 <input type="submit" value="Logout">
