--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,7 @@
 <html lang=en>
 <head>
 <meta charset="utf-8">
-<title>internal-github-login</title>
+<title>internal-google-login {{ .ID }}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 <style>
