--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,3 @@
-{{template "header"}}
+{{template "header" .}}
 <h2><a href="/admin"><button type="button">Admin page</button></a></h2>
 {{template "footer"}}
