--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,7 +1,8 @@
 {{template "header" . }}
 
-<h2>Administrator page {{ .ID }}</h2>
-<p>Hi {{ .Name }} 👋</p>
+<h2>Administrator page {{ .Session.ID }}</h2>
+
+<a href="/"><button>Go to Top</button></a>
 
 <form action="/logout" method="post">
 <input type="submit" value="Logout">
